--- a/order-service/package.json
+++ b/order-service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "reporting-service",
+  "name": "order-service",
   "version": "1.0.0",
-  "description": "Analytics and reporting service for dental store",
+  "description": "Order management service for dental store",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -18,7 +18,6 @@
     "compression": "^1.7.4",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
-    "exceljs": "^4.4.0",
     "pdfkit": "^0.14.0",
     "jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.1",
@@ -34,10 +33,9 @@
     "node": ">=18.0.0"
   },
   "keywords": [
-    "reporting",
-    "analytics",
-    "excel",
-    "pdf",
+    "order",
+    "management",
+    "invoice",
     "dental",
     "microservice"
   ],
